--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button type="button" class="btn btn-default navbar-btn" ng-click="reset()">Reset</button>
             </div>
             <div class="navbar-header navbar-right">
-                <a class="navbar-brand" style="color:#FFFFFF">Simple 8-bit Assembler Simulator</a>
+                <a class="navbar-brand" style="color:#FFFFFF">8085 Simulator</a>
             </div>
         </div>
     </nav>
