--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <script type="text/javascript" src="//use.typekit.net/tor0zlh.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
+<style>
+    .value-convertor{
+        border: none;
+        height: 33px;
+        border-radius: 5px;
+    }
+    label{
+        color: #FFFFFF;
+        font-size: 1.75rem;
+        font-weight: 200;
+    }
+</style>
 <body ng-controller="Ctrl">
     <nav class="navbar navbar-inverse" role="navigation" style="background-color:#428BCA;border:0px;border-radius:0px;">
         <div class="container">
@@ -21,6 +33,12 @@
             </div>
             <div class="navbar-header navbar-right">
                 <a class="navbar-brand" style="color:#FFFFFF">8085 Simulator</a>
+            </div>
+            <div class="navbar-header navbar-form">
+                <label for="hex">Hexadecimal</label>
+                <input type="text" class="value-convertor" name="hex" id="hex-input" placeholder="0x" oninput="convertHexToDecimal()">
+                <input type="text" class="value-convertor" name="dec" id="dec-output" value="0" oninput="convertDecToHex()">
+                <label for="hex">Decimal</label>
             </div>
         </div>
     </nav>
@@ -164,5 +182,31 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
     <script src="assets/asmsimulator.js"></script>
+    <script>
+        function convertHexToDecimal() {
+            const hexInput = document.getElementById('hex-input').value;
+            const decOutput = document.getElementById('dec-output');
+            
+            if (hexInput.startsWith('0x') || hexInput.startsWith('0X')) {
+                const hexValue = hexInput.substring(2);
+                const decimalValue = parseInt(hexValue, 16);
+                decOutput.value = decimalValue;
+            } else {
+                decOutput.value = 'Invalid hex format';
+            }
+        }
+        function convertDecToHex(){
+            const decInput = document.getElementById('dec-output').value;
+            const hexOutput = document.getElementById('hex-input');
+            
+            if (decInput.startsWith('0x') || decInput.startsWith('0X')) {
+                hexOutput.value = decInput;
+            } else {
+                const decimalValue = parseInt(decInput, 10);
+                const hexValue = decimalValue.toString(16);
+                hexOutput.value = '0x' + hexValue;
+            }
+        }
+    </script>
 </body>
 </html>
